created list page basic show

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 		<meta name="mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="apple-mobile-web-app-title" content="WordPedia" />
-		<meta name="application-name" content="WordPedia" />
+		<meta name="apple-mobile-web-app-title" content="TIVO" />
+		<meta name="application-name" content="TIVO" />
     <meta name="nightmode" content="enable/disable">
     <meta name="layoutmode" content="fitscreen/standard">
     <meta name="screen-orientation" content="portrait">
-    <meta name="description" content="React CSR boilerplate code" />
+    <meta name="description" content="TIVO" />
 
     <link rel='shortcut icon' type='image/x-icon' href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/assets/logo192.png" />
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React CSR App</title>
+    <title>TIVO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
